# SerialRUN

./: .forge-state.json  .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE_CN.md  Cargo.toml  LICENSE  Makefile  README.md  README_CN.md  wechat_article.html
.claude-phases/: FINAL-REPORT.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: plugin_request.md
benches/: serial_benchmarks.rs
community-demos/: README.md
community-demos/demo-template/: README.md
community-demos/demo-template/configs/: README.md
community-demos/demo-template/prompts/: README.md
community-demos/demo-template/screenshots/: README.md
crates/serialrun-cli/: Cargo.toml
crates/serialrun-cli/src/: main.rs
crates/serialrun-core/: Cargo.toml
crates/serialrun-core/src/: data_logger.rs  lib.rs  plugin.rs  plugin_install.rs  plugin_registry.rs
crates/serialrun-core/src/protocol/: canalyst.rs  mod.rs  modbus_master.rs  pcap.rs
crates/serialrun-gui/: Cargo.toml  Info.plist
crates/serialrun-gui/src/: app.rs  async_utils.rs  cli.rs  icon.rs  main.rs  mcp_server.rs  plugin_callbacks.rs  port_owner.rs  state.rs  theme.rs  util.rs
crates/serialrun-gui/src/ui/: bridge.rs  can_analyzer.rs  charts.rs  checksum.rs  connection.rs  (+23 more)
crates/serialrun-mcp/: Cargo.toml
crates/serialrun-mcp/src/: main.rs
crates/serialrun-plugin-api/: Cargo.toml
crates/serialrun-plugin-api/src/: lib.rs  manifest.rs
crates/serialtap-gui/src/: app.rs  async_utils.rs  icon.rs  main.rs  state.rs
crates/serialtap-mcp/src/: main.rs
docs/: AUTO_IMPLEMENT.md  BUILD.md  BUILD_CHECKLIST.md  BUILD_CHECKLIST_CN.md  BUILD_CN.md  FEATURE_EVALUATION.md  MANUAL.md  MANUAL_CN.md  MCP_API.md  MCP_REFERENCE.md  MCP_SOP.md  PLUGIN_CHEATSHEET.md  PLUGIN_DEVELOPMENT.md  PLUGIN_DEVELOPMENT_AUTOMATION.md  PLUGIN_GUIDE.md  PLUGIN_SCHEMA.json  PLUGIN_SPEC.md  PLUGIN_VISUAL_SPEC.md  QUALITY_REPORT.md  SKILL.md  SKILL_CN.md  help_en.md  help_zh.md
plugins/serialrun-example-plugin/: Cargo.toml  plugin.json
plugins/serialrun-example-plugin/src/: lib.rs
plugins/serialrun-mpy-ide/: Cargo.toml  plugin.json
plugins/serialrun-mpy-ide/src/: lib.rs
plugins/serialrun-plugin-adc-reader/: Cargo.toml  plugin.json
plugins/serialrun-plugin-adc-reader/src/: lib.rs
plugins/serialrun-plugin-relay-controller/: Cargo.toml  plugin.json
plugins/serialrun-plugin-temperature-monitor/: Cargo.toml  README.md  plugin.json
plugins/serialrun-stc-isp/: Cargo.toml  plugin.json
plugins/serialrun-stc-isp/src/: chip.rs  lib.rs  protocol.rs
scripts/: auto-implement.sh  auto_develop_plugin.sh  gen_icon.py  monitor_plugins.sh  release.sh  setup_webhook.sh  start_webhook.sh  sync-remotes.sh  webhook_server.py
serialrun-0.3.0-windows-x64/: help_zh.md
tests/: cli_tests.rs  mcp_comprehensive_test.py  mcp_config_test.py  mcp_slow_test.py  protocol_tests.rs  serial_tests.rs
website/: DEPLOY_WEB.md  TODAY_REPORT.md  downloads.html  guide.html  i18n.js  index.html  license.html  plugins.html  script.js  sitemap.xml  style.css
website/assets/wechat/: article_v04_story.md  copywriting.html
(+41 files in other folders)
