[package]
name = "serialrun-core"
version = "0.4.3"
edition = "2021"
description = "Core library for SerialRUN serial port assistant"
license = "MIT"

[dependencies]
serialport = { workspace = true }
tokio = { workspace = true }
tokio-serial = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
serialrun-plugin-api = { path = "../serialrun-plugin-api" }
libloading = { workspace = true }
zip = "2"
reqwest = { workspace = true }
base64 = { workspace = true }
pcap-file = "2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
