[package]
name = "serialrun-mcp"
version = "0.4.3"
edition = "2021"
description = "MCP server for SerialRUN serial port assistant"
license = "MIT"

[[bin]]
name = "serialrun-mcp"
path = "src/main.rs"

[dependencies]
serialrun-core = { path = "../serialrun-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
