[package]
name = "serialrun-plugin-adc-reader"
version = "0.4.0"
edition = "2021"
description = "Example plugin for SerialRUN"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
log = { workspace = true }
serialrun-plugin-api = { path = "../../crates/serialrun-plugin-api" }
