[package]
name = "serialrun-stc-isp"
version = "0.4.3"
edition = "2021"
description = "STC MCU ISP flashing plugin for SerialRUN"
license = "BSL-1.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
serialrun-plugin-api = { path = "../../crates/serialrun-plugin-api" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
